# vibehunter

./: .gitignore  package-lock.json  package.json  tsconfig.json
backend/: Cargo.toml  flake.nix  rust-toolchain.toml
backend/src/: engine.rs  gamestate.rs  input.rs  main.rs  messages.rs  network.rs
client/: README.md  index.html  package.json  shell.nix  tsconfig.json  vite.config.ts
client/.cursor/rules/: client.mdc  common.mdc  objects.mdc  scenes.mdc  systems.mdc  world.mdc
client/public/assets/characters/: characters.json
client/public/assets/map/: map-hitboxes.json
client/scripts/: resize-enemies.ts
client/src/assets/enemies/: enemies.json
client/src/client/: main.ts  phaserConfig.ts
client/src/client/behaviors/: AttackingMeleeBehavior.ts  AttackingRangedBehavior.ts  BaseBehavior.ts  ChaseTargetBehavior.ts  FleeBehavior.ts  IdleBehavior.ts
client/src/client/camera/: CameraManager.ts
client/src/client/debug/: EnemyDebugDisplay.ts  EntityDebugDisplay.ts  PlayerDebugDisplay.ts  index.ts
client/src/client/definitions/: attacks.json  enemies.json  projectiles.json  statusEffects.json  upgrades.json  waves.json
client/src/client/effects/: BaseStatusEffect.ts  DamageOverTimeEffect.ts  SlowEffect.ts  StunEffect.ts
client/src/client/eventHandlers/: collisionHandlers.ts
client/src/common/: PlayerStats.ts  events.ts  world.ts
client/src/types/: fastnoise-lite.d.ts
graphic-generators/: map_generator_template.ts  package.json  urban-map-generator.ts
graphic-generators/output/: map-hitboxes.json
scripts/: extract-sprites.ts
(+49 files in other folders)
