[package]
name = "vibegame"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-util = { version = "0.3.30" }
dashmap = "5.5.3"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
